v0.7.0/_sources/gallery/index.rst
:orphan:

.. _gallery:

Available datasets
==================

Use the functions in the :mod:`ensaio` module to download and cache (store)
each dataset on your computer.
See the :ref:`api` for more information about each dataset, the original data
sources, and their licenses.
The datasets are prepared for use in Ensaio in the repositories of the
`Fatiando a Terra Datasets <https://github.com/fatiando-data>`__ GitHub
organization.

.. tip::

    Click on the images for examples of fetching, loading, and plotting each
    dataset.



.. raw:: html

    <div class="sphx-glr-thumbnails">


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This dataset is a compilation of several public domain single-beam bathymetry surveys of the oc...">

.. only:: html

  .. image:: /gallery/images/thumb/sphx_glr_caribbean-bathymetry_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_caribbean-bathymetry.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Bathymetry single-beam surveys of the Caribbean</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="The grid is grid-node registered and stored in netCDF with CF-compliant metadata. The geoid hei...">

.. only:: html

  .. image:: /gallery/images/thumb/sphx_glr_earth-geoid_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_earth-geoid.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Earth geoid height grid at 10 arc-minute resolution</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="The grid is grid-node registered and stored in netCDF with CF-compliant metadata. The gravity v...">

.. only:: html

  .. image:: /gallery/images/thumb/sphx_glr_earth-gravity_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_earth-gravity.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Earth gravity grid at 10 arc-minute resolution</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="The grid is grid-node registered and stored in netCDF with CF-compliant metadata. The values ar...">

.. only:: html

  .. image:: /gallery/images/thumb/sphx_glr_earth-topography_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_earth-topography.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Earth topography grid at 10 arc-minute resolution</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This is a compilation of 3D GPS velocities for the Alps. The horizontal velocities are referenc...">

.. only:: html

  .. image:: /gallery/images/thumb/sphx_glr_alps-gps-velocity_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_alps-gps-velocity.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">GPS velocities (3-component) for the Alps</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This dataset contains ground gravity observations over the area that comprises the Bushveld Ige...">

.. only:: html

  .. image:: /gallery/images/thumb/sphx_glr_bushveld-gravity_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_bushveld-gravity.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Gravity ground-based data over the Bushveld Complex, Southern Africa</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This dataset is a compilation of several public domain ground measurements of gravity from Sout...">

.. only:: html

  .. image:: /gallery/images/thumb/sphx_glr_southern-africa-gravity_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_southern-africa-gravity.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Gravity ground-based surveys of Southern Africa</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This is a digitization of an airborne magnetic survey of Britain. Data are sampled where flight...">

.. only:: html

  .. image:: /gallery/images/thumb/sphx_glr_britain-magnetic_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_britain-magnetic.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Magnetic airborne survey of Britain</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This is a section of a survey acquired in 1990 by the Queensland Government, Australia. The lin...">

.. only:: html

  .. image:: /gallery/images/thumb/sphx_glr_osborne-magnetic_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_osborne-magnetic.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Magnetic airborne survey of the Osborne Mine, Australia</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This is a section of an airborne survey acquired in 1990 by the Queensland Government, Australi...">

.. only:: html

  .. image:: /gallery/images/thumb/sphx_glr_lightning-creek-magnetic_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_lightning-creek-magnetic.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Magnetic anomaly grid of the Lightning Creek Sill Complex, Australia</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="High-resolution magnetic map of a stalagmite sample from Wintimdouine Cave, Morocco, created us...">

.. only:: html

  .. image:: /gallery/images/thumb/sphx_glr_morroco_speleothem_qdm_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_morroco_speleothem_qdm.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">QDM magnetic microscopy dataset of a speleothem from Morocco</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This dataset consists in a regular grid with topography and bathymetry over Southern Africa. It...">

.. only:: html

  .. image:: /gallery/images/thumb/sphx_glr_southern-africa-topography_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_southern-africa-topography.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Topography and bathymetry of Southern Africa</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This is a structure-from-motion point cloud of the 2018 lava flows of the Sierra Negra volcano,...">

.. only:: html

  .. image:: /gallery/images/thumb/sphx_glr_sierra-negra-topography_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_sierra-negra-topography.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Topography of the 2018 lava flows of the Sierra Negra volcano, Ecuador</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This is a lidar point cloud (ground reflections only) sliced to the small Trail Islands to the ...">

.. only:: html

  .. image:: /gallery/images/thumb/sphx_glr_british-columbia-lidar_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_british-columbia-lidar.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Topography of the Trail Islands in British Columbia, Canada</div>
    </div>


.. raw:: html

    </div>


.. toctree::
   :hidden:

   /gallery/caribbean-bathymetry
   /gallery/earth-geoid
   /gallery/earth-gravity
   /gallery/earth-topography
   /gallery/alps-gps-velocity
   /gallery/bushveld-gravity
   /gallery/southern-africa-gravity
   /gallery/britain-magnetic
   /gallery/osborne-magnetic
   /gallery/lightning-creek-magnetic
   /gallery/morroco_speleothem_qdm
   /gallery/southern-africa-topography
   /gallery/sierra-negra-topography
   /gallery/british-columbia-lidar



.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
